--- a/login-view/build.gradle
+++ b/login-view/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    compile project(':login-core')
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:recyclerview-v7:$support_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
