add test library

--- a/login-core/build.gradle
+++ b/login-core/build.gradle
@@ -12,4 +12,6 @@ apply plugin: 'kotlin'
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testCompile "junit:junit:$junit_version"
+    testCompile "org.mockito:mockito-core:$mockito_version"
 }
