--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 buildscript {
     ext.support_version = '23.4.0'
     ext.kotlin_version = '1.0.2'
+    ext.junit_version = '4.12'
+    ext.mockito_version = '1.10.19'
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
