--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-24.0.0 rc1
+    - build-tools-23.0.3
     - android-23
     - extra-android-m2repository
     - extra-google-m2repository
