--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.junit_version = '4.12'
     ext.mockito_version = '1.10.19'
     ext.espresso_version = '2.2.2'
+    ext.rxjava_version = '1.1.5'
     repositories {
         jcenter()
     }
