--- a/encription/build.gradle
+++ b/encription/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 
 dependencies {
+    compile project(":registration-core")
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile "junit:junit:$junit_version"
     testCompile "org.mockito:mockito-core:$mockito_version"
