--- a/encription/build.gradle
+++ b/encription/build.gradle
@@ -10,6 +10,9 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 dependencies {
     compile project(":registration-core")
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
