--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ android {
 
 dependencies {
     compile project(':firebase')
+    compile project(':repository')
+    compile project(':registration-view')
     compile project(':select-conversation-view')
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:recyclerview-v7:$support_version"
