--- a/firebase/build.gradle
+++ b/firebase/build.gradle
@@ -25,6 +25,7 @@ android {
 
 dependencies {
     compile project(":registration-core")
+    compile project(":key-list-core")
     compile project(":encription")
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.google.firebase:firebase-database:9.0.0'
@@ -37,4 +38,5 @@ dependencies {
     androidTestCompile("com.android.support.test.espresso:espresso-intents:$espresso_version") {
         exclude group: 'com.android.support'
     }
+    compile project(path: ':key-list-view')
 }
