--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':select-conversation-view', ':select-conversation-core', ':encription', ':registration-core', ':repository', ':firebase', ':registration-view'
+include ':app', ':select-conversation-view', ':select-conversation-core', ':encription', ':registration-core', ':repository', ':firebase', ':registration-view', ':key-list-view', ':key-list-core'
