--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.mockito_version = '1.10.19'
     ext.espresso_version = '2.2.2'
     ext.rxjava_version = '1.1.5'
+    ext.kotlin_mockito_version = '0.4.1'
     repositories {
         jcenter()
     }
