--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_script:
   - adb shell input keyevent 82
 
 script:
+  - travis_wait ./gradlew test
   - travis_wait ./gradlew connectedDebugAndroidTest
 
 after_script:
