--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
           package="com.safechat">
 
     <application
+        android:name=".SecureMessengerApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,6 +15,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SelectConversationActivity"/>
+        <activity android:name=".conversation.select.SelectConversationActivity"/>
     </application>
 </manifest>
