remove dependency to encryption

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    compile project(':encription')
     compile project(':firebase')
     compile project(':repository')
     compile project(':registration-view')
