--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
 }
 
 dependencies {
-    compile project(':encription')
+    compile project(':encryption')
     compile project(':firebase')
     compile project(':repository')
     compile project(':registration-view')
