--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,9 @@
-include ':app', ':select-conversation-view', ':select-conversation-core', ':encryption', ':registration-core', ':repository', ':firebase', ':registration-view', ':exchange-symmetric-key-core'
+include ':app',
+        ':select-conversation-view',
+        ':select-conversation-core',
+        ':encryption',
+        ':registration-core',
+        ':repository',
+        ':firebase',
+        ':registration-view',
+        ':exchange-symmetric-key-core'
