--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -25,6 +25,7 @@ android {
 
 dependencies {
     compile project(':registration-core')
+    compile project(':exchange-symmetric-key-core')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version") {
         exclude group: 'com.android.support'
