--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -15,6 +15,7 @@ targetCompatibility = 1.7
 
 dependencies {
     compile project(":registration-core")
+    compile project(':exchange-symmetric-key-core')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile "junit:junit:$junit_version"
     testCompile "org.mockito:mockito-core:$mockito_version"
