--- a/exchange-symmetric-key-view/build.gradle
+++ b/exchange-symmetric-key-view/build.gradle
@@ -4,13 +4,19 @@ dependencies {
     compile project(':exchange-symmetric-key-core')
     compile "com.android.support:appcompat-v7:$support_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version") {
-        exclude group: 'com.android.support'
-    }
+
+    androidTestCompile "com.android.support.test.espresso:espresso-core:$espresso_version"
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:$espresso_version"
     androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
         exclude group: 'com.android.support'
     }
-    androidTestCompile("com.android.support.test.espresso:espresso-intents:$espresso_version") {
-        exclude group: 'com.android.support'
+    androidTestCompile("org.mockito:mockito-core:$mockito_version") {
+        exclude group: 'org.hamcrest'
+    }
+    androidTestCompile('com.google.dexmaker:dexmaker:1.2') {
+        exclude group: 'org.hamcrest'
+    }
+    androidTestCompile('com.google.dexmaker:dexmaker-mockito:1.2') {
+        exclude group: 'org.hamcrest'
     }
 }
