rename gradle files

--- a/exchange-symmetric-key-view/build.gradle
+++ b/exchange-symmetric-key-view/build.gradle
@@ -1,4 +1,4 @@
-apply from: "../androidlibrary.gradle"
+apply from: "../android_library.gradle"
 
 dependencies {
     compile project(':exchange-symmetric-key-core')
