--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile project(':registration-view')
     compile project(':select-conversation-view')
     compile project(':exchange-symmetric-key-view')
+    compile project(':conversation-view')
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:recyclerview-v7:$support_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
