--- a/firebase/build.gradle
+++ b/firebase/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile project(":registration-core")
     compile project(":select-conversation-core")
     compile project(":exchange-symmetric-key-core")
+    compile project(':conversation-view')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.google.firebase:firebase-auth:9.0.1'
     compile 'com.google.firebase:firebase-database:9.0.0'
