--- a/registration-view/src/main/AndroidManifest.xml
+++ b/registration-view/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
-<manifest package="com.safechat.registration_view">
+<manifest package="com.safechat.registration_view"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application/>
+    <application>
+        <activity android:name=".RegisterActivity"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+    </application>
 </manifest>
