--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,8 @@
-include ':app', ':exchange-symmetric-key-view', ':conversation-core', ':conversation-view',
+include ':app',
+        ':exchange-symmetric-key-view',
+        ':conversation-core',
+        ':conversation-view',
+        ':android-commons',
         ':select-conversation-view',
         ':select-conversation-core',
         ':encryption',
