--- a/android-commons/build.gradle
+++ b/android-commons/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:design:$support_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
 }
