--- a/exchange-symmetric-key-view/src/main/AndroidManifest.xml
+++ b/exchange-symmetric-key-view/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
-<manifest package="com.safechat.conversation.symmetrickey"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.safechat.conversation.symmetrickey">
 
     <application>
         <activity
             android:name=".ExchangeSymmetricKeyActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/AppTheme"/>
     </application>
 </manifest>
