--- a/registration-view/src/main/AndroidManifest.xml
+++ b/registration-view/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
-<manifest package="com.safechat.registration_view"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.safechat.registration_view">
 
     <application>
-        <activity android:name=".RegisterActivity"
-                  android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/AppTheme"/>
     </application>
 </manifest>
