--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ android {
             minifyEnabled false
         }
     }
+    dexOptions {
+        javaMaxHeapSize "1024M"
+        preDexLibraries = System.env.CI != "true"
+    }
 }
 
 play {
