--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app',
+include ':app', ':suid-calculator',
         ':exchange-symmetric-key-view',
         ':conversation-core',
         ':conversation-view',
