--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
-include ':app', ':suid-calculator',
+include ':app',
+        ':suid-calculator',
+        ':user-profile-core',
         ':exchange-symmetric-key-view',
         ':conversation-core',
         ':conversation-view',
