--- a/suid-calculator/build.gradle
+++ b/suid-calculator/build.gradle
@@ -16,4 +16,5 @@ targetCompatibility = 1.7
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile "junit:junit:$junit_version"
+    compile project(path: ':user-profile-core')
 }
