add implementation for UserService from user-profile module

--- a/firebase/build.gradle
+++ b/firebase/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile project(":select-conversation-core")
     compile project(":exchange-symmetric-key-core")
     compile project(':conversation-core')
+    compile project(':user-profile-core')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.google.firebase:firebase-auth:9.0.1'
     compile 'com.google.firebase:firebase-database:9.0.0'
