--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 include ':app',
         ':suid-calculator',
         ':user-profile-core',
+        ':user-profile-view',
         ':exchange-symmetric-key-view',
         ':conversation-core',
         ':conversation-view',
