--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':app',
+        ':users-service-core',
         ':suid-calculator',
         ':user-profile-core',
         ':user-profile-view',
