--- a/firebase/build.gradle
+++ b/firebase/build.gradle
@@ -1,43 +1,11 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-
-android {
-    compileSdkVersion commonCompileSdkVersion()
-    buildToolsVersion commonBuildToolsVersion()
-
-    defaultConfig {
-        minSdkVersion commonMinSdkVersion()
-        targetSdkVersion commonTargetSdkVersion()
-        versionCode commonVersionCode()
-        versionName commonVersionName()
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-}
+apply from: "../android_library.gradle"
+apply from: "../android_unit_test.gradle"
 
 dependencies {
     compile project(":registration-core")
     compile project(":exchange-symmetric-key-core")
     compile project(':conversation-core')
     compile project(':users-service-core')
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.google.firebase:firebase-auth:9.0.1'
     compile 'com.google.firebase:firebase-database:9.0.0'
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version") {
-        exclude group: 'com.android.support'
-    }
-    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
-        exclude group: 'com.android.support'
-    }
-    androidTestCompile("com.android.support.test.espresso:espresso-intents:$espresso_version") {
-        exclude group: 'com.android.support'
-    }
 }
