create conversation view module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     compile project(':select-conversation-view')
     compile project(':exchange-symmetric-key-view')
     compile project(':conversation-view')
+    compile project(':create-conversation-view')
     compile project(':user-profile-view')
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:recyclerview-v7:$support_version"
