change selectConversation module name to conversationsList

--- a/firebase/build.gradle
+++ b/firebase/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     compile project(":exchange-symmetric-key-core")
     compile project(':conversation-core')
     compile project(':users-service-core')
-    compile project(':select-conversation-core')
+    compile project(':conversations-list-core')
     compile 'com.google.firebase:firebase-auth:9.0.1'
     compile 'com.google.firebase:firebase-database:9.0.0'
 }
