--- a/settings.gradle
+++ b/settings.gradle
@@ -7,8 +7,8 @@ include ':app', ':create-conversation-view',
         ':conversation-core',
         ':conversation-view',
         ':android-commons',
-        ':select-conversation-view',
-        ':select-conversation-core',
+        ':conversations-list-view',
+        ':conversations-list-core',
         ':encryption',
         ':registration-core',
         ':repository',
