--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     compile project(':repository')
     compile project(':suid-calculator')
     compile project(':registration-view')
-    compile project(':select-conversation-view')
+    compile project(':conversations-list-view')
     compile project(':exchange-symmetric-key-view')
     compile project(':conversation-view')
     compile project(':create-conversation-view')
