--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -38,5 +38,5 @@ dependencies {
     androidTestCompile("com.android.support.test.espresso:espresso-intents:$espresso_version") {
         exclude group: 'com.android.support'
     }
-    compile project(path: ':select-conversation-core')
+    compile project(path: ':conversations-list-core')
 }
