--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     compile project(':exchange-symmetric-key-core')
     compile project(':conversation-core')
     compile project(':user-profile-core')
+    compile project(':conversations-list-core')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "com.elpassion.android.commons:shared-preferences:0.0.9"
     androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version") {
         exclude group: 'com.android.support'
     }
@@ -38,5 +40,4 @@ dependencies {
     androidTestCompile("com.android.support.test.espresso:espresso-intents:$espresso_version") {
         exclude group: 'com.android.support'
     }
-    compile project(path: ':conversations-list-core')
 }
